# compilers-with-automata

./: .gitignore  README.md
context_free_grammar_expression_generator/: README.md
context_free_grammar_expression_generator/inc/: compiler.h  config.h  file.h  rng.h
context_free_grammar_expression_generator/resources/: grammar.txt
context_free_grammar_expression_generator/src/: compiler.cpp  main.cpp  rng.cpp
lr_parser/: .clang-format  CMakeLists.txt  README.md  run.sh  run_tests.sh
lr_parser/docs/: class_diagram.drawio
lr_parser/inc/: clr.h  file.h  parsable.h  state.h  typedefs.h  utils.h
lr_parser/resources/: grammar.txt  grammar1.txt
lr_parser/src/: clr.cpp  main.cpp  utils.cpp
lr_parser/tests/: CMakeLists.txt
push_down_automata/: CMakeLists.txt  Makefile
push_down_automata/inc/: config.h  file.h  pda.h  typedefs.h
push_down_automata/src/: compiler.cpp
push_down_automata/tests/resources/test_set_1/: test_actions.txt
push_down_automata/tests/resources/test_set_3/: test_actions.txt
push_down_automata/tests/resources/test_set_4/: test_goto.txt
push_down_automata/tests/resources/test_set_5/: test_grammar.txt
push_down_automata_v1/: README.md  run.sh
push_down_automata_v1/inc/: compiler.h
push_down_automata_v1/src/: compiler.cpp  main.cpp  pda.cpp
push_down_automata_v1/tests/inc/: test_compiler.h
push_down_automata_v1/tests/resources/test_set_5/: test_goto.txt
push_down_automata_v1/tests/src/: main.cpp  test_compiler.cpp
